# autonomous-etl-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  etl_agent_ui.html  plan.md  pyproject.toml
.claude/skills/graphstate-contract/: SKILL.md
.claude/skills/mypy-overrides/: SKILL.md
.claude/skills/pydantic-v2/: SKILL.md
.claude/skills/pytest-patterns/: SKILL.md
.claude/skills/python-typing/: SKILL.md
.claude/skills/ruff-clean/: SKILL.md
.git_broken/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_broken/gk/: config
.git_broken/refs/heads/: aws_migration  governance_strategy  main
.github/workflows/: cd.yml  ci.yml
config/: framework_config.yaml
config/story_examples/: campaign_performance.yaml  clean_nulls.yaml  geo_revenue.yaml  join_aggregate.yaml  monthly_revenue.yaml  rfm_analysis.yaml
docs/: Governance Strategy v2.0.docx  api.md  architecture.html  architecture.md  config_guide.md  ecs-migration-steps-2-4.md  eval-plan.md  iceberg-implementation-plan.md  runbook.md  setup.md
docs/sphinx/: Makefile  agents.rst  api_reference.rst  architecture.rst  conf.py  docker.rst  getting_started.rst  index.rst  orchestration.rst  requirements.txt
docs/sphinx/_build/doctrees/: agents.doctree  api_reference.doctree  architecture.doctree  aws_services.doctree  ci_cd.doctree  configuration.doctree  deployment.doctree  docker.doctree  environment.pickle  getting_started.doctree  index.doctree  olist_data.doctree  orchestration.doctree
docs/sphinx/_build/html/: .buildinfo  .buildinfo.bak  agents.html  api_reference.html  architecture.html  aws_services.html  ci_cd.html  configuration.html  deployment.html  docker.html  genindex.html  getting_started.html  index.html  objects.inv  olist_data.html  orchestration.html  search.html  searchindex.js
docs/sphinx/_build/html/_sources/: aws_services.rst.txt  ci_cd.rst.txt  configuration.rst.txt  deployment.rst.txt  olist_data.rst.txt
infra/: Dockerfile  docker-compose.yml  ecs-task-def-api.json  ecs-task-def-worker.json  postgres-init.sql
infra/glue_jobs/: csv_to_iceberg.py
infra/lambda/schema_detector/: build_function.sh  build_layer.sh  glue_helper.py  handler.py  requirements.txt  schema_reader.py
infra/terraform/: ec2_bkp.tf.bak  ecr.tf  ecs.tf  ecs_iam.tf  ecs_outputs.tf  ecs_security_groups.tf  ecs_variables.tf  glue.tf  iam.tf  iceberg.tf  main.tf  outputs.tf  rds.tf  s3_lifecycle.tf  security_group.tf  sqs.tf  terraform.tfstate.1774581413.backup  terraform.tfstate.1774581810.backup  terraform.tfstate.1774651567.backup  variables.tf  vpc.tf
notebooks/educational/: 01_project_overview.ipynb  02_pyspark_pipeline_walkthrough.ipynb  03_business_analytics_demo.ipynb
orchestration/airflow/dags/: etl_agent_dag.py
scripts/: demo_run.py  generate_fixtures.py  migrate_olist_to_iceberg.py  seed_db.py
src/etl_agent/: __init__.py  cli.py  worker.py
src/etl_agent/agents/: __init__.py  base.py  coding_agent.py  deploy_agent.py  orchestrator.py  pr_agent.py  story_parser.py  test_agent.py
src/etl_agent/analytics/: __init__.py  campaign_optimizer.py  customer_intent.py  geo_analytics.py  rfm_analysis.py
src/etl_agent/api/: __init__.py  main.py  middleware.py
src/etl_agent/api/v1/: __init__.py  catalog.py  health.py  run_store.py  runs.py  stories.py
src/etl_agent/core/: __init__.py  audit.py  config.py  data_catalog.py  exceptions.py  llm_governance.py  logging.py  models.py  state.py
src/etl_agent/database/: models.py  session.py
src/etl_agent/database/migrations/: alembic.ini  env.py
src/etl_agent/prompts/: __init__.py  code_generator.py  story_parser.py  test_generator.py
src/etl_agent/prompts/examples/: __init__.py  code_gen_examples.py  story_parser_examples.py  test_gen_examples.py
src/etl_agent/spark/: __init__.py  optimizer.py  session.py
src/etl_agent/spark/templates/: delta_ops.py.j2  pipeline.py.j2  pipeline_readme.md.j2  transformations.py.j2
src/etl_agent/static/: index.html
src/etl_agent/tools/: __init__.py  aws_tools.py  code_validator.py  github_tools.py  llm_cache.py
src/etl_agent/ui/static/: app.js
src/etl_agent/ui/templates/: index.html  pipeline.html  runs.html
tests/: conftest.py
tests/fixtures/data/: amazon_campaigns.parquet  amazon_customers.parquet  amazon_orders.parquet  amazon_products.parquet
tests/integration/: conftest.py  test_airflow_trigger.py  test_e2e_pipeline.py
tests/unit/: test_analytics.py  test_coding_agent.py  test_pr_agent.py  test_story_parser.py  test_test_agent.py
